MongoDB로 이전 작업 중 + * 표시 없애기 및 Instant, List 위주로 자료구조 바꾸기 (#33)
* REFACT : * 표시 없애기

* UPDATE : 시간대를 전부 Instant, 리스트 관련 자료구조는 전부 List로 ArrayList 위주로 변경

* UPDATE : MySQL에서 MongoDB로 이전 작업 중

* ADD : Docker, MongoDB 연동 관련 파일 작성

* ADD : Docker, MongoDB 연동 관련 코드 작성 중

* REFACT : (자잘자잘한 작업) * 없애기, Instant로 변환 시키기 (임시로 한 것이라서 추후에 테스트를 위해서 변경할 것)

* UPDATE : Authentication에 MongoDB 관련 코드로 교체 증, Controller랑 Service 역할 제대로 분리하는 중

* DELETE : .class 파일 삭제, .gitignore에 .class 추가

* UPDATE :.gitignore에서 .class 지우고 .out으로

* UPDATE : return값 내에서 void 없애기

* UPDATE : return값 내에서 void 없애기

* UPDATE : challenge쪽 주석 추가